--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="backgroundColor">#151515</color>
     <color name="accentColor">#ea773c</color>
+    <color name="gray">#a2b0b8</color>
+    <color name="white">#ffffff</color>
 
 </resources>
