--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -17,13 +17,16 @@
             android:layout_marginEnd="8dp"/>
 
         <TextView
-            android:id="@+id/contact_text"
+            android:id="@+id/contact_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="line_1"
-            android:textStyle="bold"
+            android:layout_alignTop="@+id/contact_image"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="6dp"
             android:layout_toEndOf="@+id/contact_image"
-            android:textSize="30sp"/>
+            android:text="line_1"
+            android:textSize="30sp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
