--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -10,20 +10,20 @@
         android:padding="8dp">
 
         <ImageView
-            android:id="@+id/contact_image"
+            android:id="@+id/user_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_person"
             android:layout_marginEnd="8dp"/>
 
         <TextView
-            android:id="@+id/contact_name"
+            android:id="@+id/user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/contact_image"
+            android:layout_alignTop="@+id/user_image"
             android:layout_marginStart="20dp"
             android:layout_marginTop="6dp"
-            android:layout_toEndOf="@+id/contact_image"
+            android:layout_toEndOf="@+id/user_image"
             android:text="line_1"
             android:textSize="30sp"
             android:textStyle="bold" />
