--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -106,4 +106,19 @@
         app:layout_constraintTop_toTopOf="@+id/create_account_text"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="169dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="168dp"
+        android:backgroundTint="@color/accentColor"
+        app:layout_constraintCircleRadius="10dp"
+        android:text="Login"
+        android:textAllCaps="false"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="@+id/registration_password"
+        app:layout_constraintHorizontal_bias="0.53"
+        app:layout_constraintStart_toEndOf="@+id/password_icon"
+        app:layout_constraintTop_toBottomOf="@+id/registration_password" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
