--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -135,8 +135,8 @@
 
     <Button
         android:id="@+id/registration_button"
-        android:layout_width="169dp"
-        android:layout_height="76dp"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
         android:layout_marginTop="168dp"
         android:backgroundTint="@color/accentColor"
         android:text="Create Account"
