--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/registration_email"
+        android:id="@+id/login_email"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/registration_password"
+        android:id="@+id/login_password"
         android:layout_width="300dp"
         android:layout_height="42dp"
         android:layout_marginTop="32dp"
@@ -49,10 +49,10 @@
         android:inputType="textPassword"
         android:textColor="@color/gray"
         android:textColorHint="@color/gray"
-        app:layout_constraintEnd_toEndOf="@+id/registration_email"
+        app:layout_constraintEnd_toEndOf="@+id/login_email"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/registration_email"
-        app:layout_constraintTop_toBottomOf="@+id/registration_email" />
+        app:layout_constraintStart_toStartOf="@+id/login_email"
+        app:layout_constraintTop_toBottomOf="@+id/login_email" />
 
 
 
@@ -62,9 +62,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="@+id/registration_email"
-        app:layout_constraintEnd_toStartOf="@+id/registration_email"
-        app:layout_constraintTop_toTopOf="@+id/registration_email"
+        app:layout_constraintBottom_toBottomOf="@+id/login_email"
+        app:layout_constraintEnd_toStartOf="@+id/login_email"
+        app:layout_constraintTop_toTopOf="@+id/login_email"
         app:srcCompat="@drawable/ic_email" />
 
     <ImageView
@@ -72,9 +72,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/registration_password"
-        app:layout_constraintEnd_toStartOf="@+id/registration_password"
-        app:layout_constraintTop_toTopOf="@+id/registration_password"
+        app:layout_constraintBottom_toBottomOf="@+id/login_password"
+        app:layout_constraintEnd_toStartOf="@+id/login_password"
+        app:layout_constraintTop_toTopOf="@+id/login_password"
         app:srcCompat="@drawable/ic_lock" />
 
     <TextView
@@ -116,8 +116,8 @@
         android:textAllCaps="false"
         android:textSize="25sp"
         app:layout_constraintCircleRadius="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/registration_password"
-        app:layout_constraintStart_toStartOf="@+id/registration_password"
-        app:layout_constraintTop_toBottomOf="@+id/registration_password" />
+        app:layout_constraintEnd_toEndOf="@+id/login_password"
+        app:layout_constraintStart_toStartOf="@+id/login_password"
+        app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
