--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -6,7 +6,7 @@
     tools:context=".Fragments.ContactsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/recycler_view_contacts"
         android:padding="10dp"
         android:clipToPadding="false"
         android:layout_width="match_parent"
