--- a/app/src/main/res/layout/user_request_item.xml
+++ b/app/src/main/res/layout/user_request_item.xml
@@ -29,12 +29,20 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_delete_friendship"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="30dp"
-            android:text="Button" />
+            android:text="Remove" />
+
+        <Button
+            android:id="@+id/button_accept_friendship"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="140dp"
+            android:text="Accept" />
 
 
     </RelativeLayout>
