--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp">
 
     <RelativeLayout
+        android:id="@+id/button_open_friend"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true">
 
         <ImageView
             android:id="@+id/user_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_person"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_person" />
 
         <TextView
             android:id="@+id/user_name"
@@ -24,17 +28,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="6dp"
             android:layout_toEndOf="@+id/user_image"
-            android:text="line_1"
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="30dp"
-            android:text="Button" />
 
 
     </RelativeLayout>
