--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,9 +1,10 @@
-<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".Activity.ChatActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
+    tools:context=".Activity.ChatActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,6 +13,7 @@ tools:context=".Activity.ChatActivity">
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:padding="10dp"
+        android:background="@color/backgroundColor"
         app:layout_constraintBottom_toTopOf="@+id/chat_input_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,14 +23,18 @@ tools:context=".Activity.ChatActivity">
 
     <EditText
         android:id="@+id/chat_input_text"
-        android:layout_width="275dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@color/secondBackgroundColor"
         android:ems="10"
         android:inputType="textPersonName"
+        android:outlineSpotShadowColor="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/button_send_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button_send_message"
@@ -38,4 +44,4 @@ tools:context=".Activity.ChatActivity">
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout >
+</androidx.constraintlayout.widget.ConstraintLayout>
