--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -7,10 +7,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_contacts"
-        android:padding="10dp"
-        android:clipToPadding="false"
+        android:background="@color/backgroundColor"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/user_item"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
