--- a/app/src/main/res/layout/fragment_search_friends.xml
+++ b/app/src/main/res/layout/fragment_search_friends.xml
@@ -7,10 +7,11 @@ tools:context=".Fragments.SearchFriendsFragment">
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recycler_view_search_friends"
-    android:padding="10dp"
+    android:layout_marginTop="50dp"
     android:clipToPadding="false"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:listitem="@layout/user_item"/>
+    tools:listitem="@layout/user_item"
+    android:background="@color/backgroundColor"/>
 
 </RelativeLayout>
