--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MenuActivity"
+    tools:context=".view.Activity.MenuActivity"
     tools:ignore="HardcodedText">
 
     <androidx.viewpager.widget.ViewPager
